[gd_scene load_steps=8 format=2]

[ext_resource path="res://CornerPiece.gd" type="Script" id=1]
[ext_resource path="res://PropertyFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://art/freeparking.png" type="Texture" id=3]
[ext_resource path="res://art/go.png" type="Texture" id=4]
[ext_resource path="res://art/gotojail.png" type="Texture" id=5]
[ext_resource path="res://art/jail.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "go",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "jail",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "gotojail",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "freeparking",
"speed": 5.0
} ]

[node name="CornerPiece" type="Node2D"]
script = ExtResource( 1 )

[node name="CornerColor" type="ColorRect" parent="."]
margin_right = 100.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Picture" type="AnimatedSprite" parent="."]
position = Vector2( 49.3925, 53.4125 )
scale = Vector2( 0.762447, 0.762447 )
frames = SubResource( 1 )
animation = "jail"

[node name="Houses" type="Node2D" parent="."]
position = Vector2( 60.6259, 3.31067 )
rotation = 0.785398
scale = Vector2( 1, 1 )

[node name="House1" type="Node2D" parent="Houses"]
position = Vector2( -5, 0 )

[node name="ColorRect2" type="ColorRect" parent="Houses/House1"]
margin_left = 6.83794
margin_top = 3.27032
margin_right = 16.8379
margin_bottom = 13.2703
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Houses/House1"]
margin_left = 7.13524
margin_top = 2.67571
margin_right = 16.6352
margin_bottom = 12.1757
color = Color( 0.25098, 0.572549, 0.0705882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="House2" type="Node2D" parent="Houses"]
visible = false
position = Vector2( 7, 0 )

[node name="ColorRect2" type="ColorRect" parent="Houses/House2"]
margin_left = 6.83794
margin_top = 3.27032
margin_right = 16.8379
margin_bottom = 13.2703
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Houses/House2"]
margin_left = 7.13524
margin_top = 2.67571
margin_right = 16.6352
margin_bottom = 12.1757
color = Color( 0.25098, 0.572549, 0.0705882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="House3" type="Node2D" parent="Houses"]
visible = false
position = Vector2( 19, 0 )

[node name="ColorRect2" type="ColorRect" parent="Houses/House3"]
margin_left = 6.83794
margin_top = 3.27032
margin_right = 16.8379
margin_bottom = 13.2703
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Houses/House3"]
margin_left = 7.13524
margin_top = 2.67571
margin_right = 16.6352
margin_bottom = 12.1757
color = Color( 0.25098, 0.572549, 0.0705882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="House4" type="Node2D" parent="Houses"]
position = Vector2( 31, 0 )

[node name="ColorRect2" type="ColorRect" parent="Houses/House4"]
margin_left = 6.83794
margin_top = 3.27032
margin_right = 16.8379
margin_bottom = 13.2703
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Houses/House4"]
margin_left = 7.13524
margin_top = 2.67571
margin_right = 16.6352
margin_bottom = 12.1757
color = Color( 0.25098, 0.572549, 0.0705882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="House5" type="Node2D" parent="Houses"]
visible = false
position = Vector2( -2, 0 )

[node name="ColorRect2" type="ColorRect" parent="Houses/House5"]
margin_left = 6.83794
margin_top = 3.27032
margin_right = 46.8379
margin_bottom = 13.2703
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Houses/House5"]
margin_left = 7.13524
margin_top = 2.67571
margin_right = 47.1352
margin_bottom = 12.1757
color = Color( 0.533333, 0.0862745, 0.054902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 19.1259
margin_top = 6.89334
margin_right = 78.1259
margin_bottom = 32.8933
rect_rotation = 45.0
rect_pivot_offset = Vector2( 30.2625, 42.8844 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "Jail"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reference" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 100.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Reference" to="." method="Reference"]
